implement node and relatioship count for in memory graph db